# text-editor-software-rendering

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.toml  premake5.lua  res.rc
cpp-tokenizer/: cpp_tokenizer.cpp  cpp_tokenizer.hpp
include/: buffer.hpp  cairo.hpp  cairo_context.hpp  config.hpp  config_manager.hpp  cpp_syntax_parser.hpp  cpp_tokenizer_cache.hpp  cursor_manager.hpp  freetype_context.hpp  incremental_render_update.hpp  macros.hpp  rocket_render.hpp  sdl2.hpp  shortcut_manager.hpp  types.hpp  utils.hpp  window.hpp
scripts/linux/: build_and_run_debug.sh  build_and_run_release.sh  clean.sh  format_code.sh  gen_makefiles.sh
scripts/windows/: build_and_run_debug.bat  build_and_run_release.bat  build_debug.bat  build_distributable.bat  clean.bat  format_code.bat  gen_makefiles.bat  run_debug.bat
src/: buffer.cpp  cairo_context.cpp  config_manager.cpp  cpp_tokenizer_cache.cpp  cursor_manager.cpp  freetype_context.cpp  incremental_render_update.cpp  main.cpp  rocket_render.cpp  utils.cpp  window.cpp
